--- a/tests/services-compose.yml
+++ b/tests/services-compose.yml
@@ -8,7 +8,7 @@ services:
       - ../tests/Fixtures/html:/usr/share/nginx/html
 
   compiler:
-    image: smartassert/basil-compiler:0.27
+    image: ghcr.io/smartassert/basil-compiler:0.29
     container_name: test-compiler-container
     volumes:
       - ../tests/Fixtures/basil:/app/source
@@ -17,7 +17,7 @@ services:
       - 9000:8000
 
   chrome-runner:
-    image: smartassert/chrome-runner:0.16
+    image: ghcr.io/smartassert/chrome-runner:0.18
     container_name: test-chrome-runner-container
     volumes:
       - ../tests/build/tests:/app/tests
@@ -25,7 +25,7 @@ services:
       - 9001:8000
 
   firefox-runner:
-    image: smartassert/firefox-runner:0.16
+    image: ghcr.io/smartassert/firefox-runner:0.18
     container_name: test-firefox-runner-container
     volumes:
       - ../tests/build/tests:/app/tests
