--- a/tests/services-compose.yml
+++ b/tests/services-compose.yml
@@ -8,7 +8,7 @@ services:
       - ../tests/Fixtures/html:/usr/share/nginx/html
 
   compiler:
-    image: ghcr.io/smartassert/basil-compiler:0.29
+    image: ghcr.io/smartassert/compiler:0.29
     container_name: test-compiler-container
     volumes:
       - ../tests/Fixtures/basil:/app/source
