--- a/composer.json
+++ b/composer.json
@@ -23,14 +23,12 @@
         }
     },
     "scripts": {
-        "cs-ecs": "./vendor/bin/ecs check src tests --ansi --no-progress-bar --config ecs.php",
+        "cs-fixer-dry-run": "./vendor/bin/php-cs-fixer fix --dry-run --verbose --show-progress none",
+        "cs-fixer-fix": "./vendor/bin/php-cs-fixer fix --diff",
         "cs-phpcs": "./vendor/bin/phpcs",
         "cs": [
-            "@cs-ecs",
+            "@cs-fixer-dry-run",
             "@cs-phpcs"
-        ],
-        "cs-fix": [
-            "./vendor/bin/ecs check src tests --ansi --config ecs.php --fix"
         ],
         "static-analysis": "./vendor/bin/phpstan analyse",
         "test": "./vendor/bin/phpunit --colors=always",
@@ -65,6 +63,7 @@
         "webignition/yaml-document-generator": "^0.3.0"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.0",
         "mockery/mockery": "^1.4",
         "php-mock/php-mock": "^2.3",
         "php-mock/php-mock-mockery": "^1.3",
@@ -73,7 +72,6 @@
         "phpstan/phpstan-mockery": "^0.12.12",
         "phpunit/phpunit": "^9.5",
         "squizlabs/php_codesniffer": "^3.6",
-        "symplify/easy-coding-standard": "^9.2",
         "webignition/yaml-document-set-parser": "^0.2.0"
     },
     "bin": [
