Use phpstan:^1 level 9

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,9 +1,9 @@
 parameters:
-  level: 8
+  level: 9
   paths:
     - bin
     - src
     - tests
   inferPrivatePropertyTypeFromConstructor: true
-  excludes_analyse:
+  excludePaths:
     - '*/tests/build/*'
