--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,11 +8,11 @@ on:
 
 jobs:
   unit:
-    name: PHPUnit unit tests - PHP ${{ matrix.php-versions }} ${{ matrix.operating-system }}
+    name: PHPUnit unit tests - PHP ${{ matrix.php }}
     strategy:
       matrix:
         operating-system: [ubuntu-latest]
-        php-versions: ['8']
+        php: ['8.0']
     runs-on: ${{ matrix.operating-system }}
     steps:
       - name: Checkout
@@ -21,7 +21,7 @@ jobs:
       - name: Setup php
         uses: shivammathur/setup-php@v2
         with:
-          php-version: ${{ matrix.php-versions }}
+          php-version: ${{ matrix.php }}
 
       - name: Download dependencies
         uses: php-actions/composer@v2
@@ -32,26 +32,26 @@ jobs:
         run: composer test
 
   integration:
-    name: Integration tests - PHP ${{ matrix.php-versions }} ${{ matrix.operating-system }}
+    name: Integration tests - PHP ${{ matrix.php }}
     strategy:
       matrix:
         operating-system: [ ubuntu-latest ]
-        php-versions: ['8']
+        php: ['8.0']
     runs-on: ${{ matrix.operating-system }}
 
     steps:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Install extensions
+      - name: Setup php
         uses: shivammathur/setup-php@v2
         with:
-          php-version: ${{ matrix.php-versions }}
+          php-version: ${{ matrix.php }}
 
       - name: Download dependencies
-        uses: php-actions/composer@v2
+        uses: php-actions/composer@v6
         with:
-          args: --ignore-platform-reqs --quiet
+          php_version: ${{ matrix.php }}
 
       - name: Setup integration environment
         run: composer image-integration-start
