--- a/composer.json
+++ b/composer.json
@@ -52,9 +52,9 @@
         "ext-json": "*",
         "monolog/monolog": "^2.1",
         "psr/log": "^1.1",
-        "symfony/console": "^5.2",
-        "symfony/process": "^5.1",
-        "symfony/yaml": "^5.2",
+        "symfony/console": "5.4.*",
+        "symfony/process": "5.4.*",
+        "symfony/yaml": "5.4.*",
         "webignition/basil-compiler-models": "^0.15.0",
         "webignition/basil-runner-documents": "^0.3.0",
         "webignition/single-command-application-factory": "^0.2.0",
