--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,7 @@
         ]
     },
     "require": {
-        "php": "^8.0",
+        "php": "^8.0|^8.1",
         "ext-json": "*",
         "monolog/monolog": "^2.1",
         "psr/log": "^1.1",
