--- a/tests/Fixtures/basil/Test/index-open-chrome-firefox.yml
+++ b/tests/Fixtures/basil/Test/index-open-chrome-firefox.yml
@@ -2,9 +2,9 @@ config:
   browsers:
     - chrome
     - firefox
-  url: http://nginx/index.html
+  url: http://html-fixtures/index.html
 
 "verify page is open":
   assertions:
-    - $page.url is "http://nginx/index.html"
+    - $page.url is "http://html-fixtures/index.html"
     - $page.title is "Test fixture web server default document"
