--- a/composer.json
+++ b/composer.json
@@ -55,7 +55,6 @@
         "symfony/console": "6.0.*",
         "symfony/process": "6.0.*",
         "symfony/yaml": "6.0.*",
-        "webignition/basil-compiler-models": "^0.15.0",
         "webignition/basil-runner-documents": "^1.0",
         "webignition/single-command-application-factory": "^0.5.0",
         "webignition/tcp-cli-proxy-client": "^0.12.0",
@@ -66,10 +65,12 @@
         "php-mock/php-mock": "^2.3",
         "php-mock/php-mock-mockery": "^1.3",
         "phpstan/extension-installer": "^1.1",
-        "phpstan/phpstan": "^1.4",
-        "phpstan/phpstan-mockery": "^1.0",
+        "phpstan/phpstan": "^1.7",
+        "phpstan/phpstan-mockery": "^1.1",
+        "phpstan/phpstan-phpunit": "^1.1",
         "phpunit/phpunit": "^9.5",
         "squizlabs/php_codesniffer": "^3.6",
+        "webignition/basil-compiler-models": "^5.2",
         "webignition/yaml-document-set-parser": "^0.3.0"
     },
     "bin": [
