--- a/composer.json
+++ b/composer.json
@@ -80,6 +80,9 @@
         "sort-packages": true,
         "allow-plugins": {
             "phpstan/extension-installer": true
+        },
+        "audit": {
+            "block-insecure": false
         }
     }
 }
