--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,17 +15,16 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v6
 
-      - name: Set image tag name
-        id: image_tag_name
+      - name: Set env.service_version
         env:
           RELEASE_TAG_NAME: ${{ github.event.release.tag_name }}
         run: |
-          [[ ! -z "$RELEASE_TAG_NAME" ]] && echo "::set-output name=value::$RELEASE_TAG_NAME" || echo "::set-output name=value::master"
+          [[ -n "$RELEASE_TAG_NAME" ]] && echo "service_version=$RELEASE_TAG_NAME" >> "$GITHUB_ENV" || echo "service_version=master" >> "$GITHUB_ENV"
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@31
 
       - name: Login to Github Container Repository
         uses: docker/login-action@v1
@@ -35,7 +34,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v6
         with:
           push: true
-          tags: ghcr.io/smartassert/runner-delegator:${{ steps.image_tag_name.outputs.value }}
+          tags: ghcr.io/smartassert/runner-delegator:${{ env.service_version }}
