--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,7 @@
         "ext-json": "*",
         "monolog/monolog": "^2.1",
         "psr/log": "^1.1",
-        "symfony/console": "6.0.*",
+        "symfony/console": "^8",
         "symfony/process": "6.0.*",
         "symfony/yaml": "6.0.*",
         "webignition/basil-runner-documents": "^1.0",
