--- a/composer.json
+++ b/composer.json
@@ -48,15 +48,15 @@
         ]
     },
     "require": {
-        "php": "^8.1",
+        "php": "^8.4",
         "ext-json": "*",
         "monolog/monolog": "^2.1",
         "psr/log": "^1.1",
-        "symfony/console": "6.0.*",
+        "symfony/console": "^8",
         "symfony/process": "6.0.*",
         "symfony/yaml": "6.0.*",
         "webignition/basil-runner-documents": "^1.0",
-        "webignition/tcp-cli-proxy-client": "^0.12.0",
+        "webignition/tcp-cli-proxy-client": "^1.0",
         "webignition/yaml-document-generator": "^1.0"
     },
     "require-dev": {
