--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,8 @@
         }
     },
     "scripts": {
-        "cs-fixer-dry-run": "docker run --rm $(if [ ! -z \"${NO_TTY}\" ]; then echo \"\"; else echo \"-t\"; fi) -w=/app -v ${PWD}:/app oskarstark/php-cs-fixer-ga:latest --allow-risky=yes --dry-run --verbose --show-progress none",
-        "cs-fixer-fix": "docker run --rm $(if [ ! -z \"${NO_TTY}\" ]; then echo \"\"; else echo \"-t\"; fi) -w=/app -v ${PWD}:/app oskarstark/php-cs-fixer-ga:latest --allow-risky=yes --diff",
+        "cs-fixer-dry-run": "./vendor/bin/php-cs-fixer check --allow-risky=yes --verbose --show-progress none",
+        "cs-fixer-fix": "./vendor/bin/php-cs-fixer fix --allow-risky=yes --diff",
         "cs-phpcs": "./vendor/bin/phpcs",
         "cs": [
             "@cs-fixer-dry-run",
@@ -60,6 +60,7 @@
         "webignition/yaml-document-generator": "^2.2"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.93",
         "mockery/mockery": "^1.4",
         "php-mock/php-mock": "^2.3",
         "php-mock/php-mock-mockery": "^1.3",
