Analyse bin/delegator with phpstan

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,7 +1,7 @@
 parameters:
   level: 10
   paths:
-    - bin
+    - bin/delegator
     - src
     - tests
   inferPrivatePropertyTypeFromConstructor: true
